# freak

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml.example  docker-run.sh  pyproject.toml  robots.txt
alembic/: env.py
alembic/versions/: 29a8d663c7ce_.py  6d418df3c72f_.py  7122c8715ff9_.py  90c7d0098efe_.py  c7c2d5b8f71c_.py  fc9d1a0dc94e_.py
freak/: __init__.py  __main__.py  accounts.py  ajax.py  algorithms.py  cli.py  colors.py  dei.py  filters.py  iding.py  models.py  search.py  utils.py
freak/rest/: __init__.py
freak/static/admin/: style.css
freak/static/js/: lib.js
freak/static/sass/: base.sass  constants.sass  content.sass  layout.sass  mobile.sass  style.sass
freak/templates/: 400.html  403.html  404.html  405.html  451.html  500.html  about.html  about.md  base.html  create.html  createguild.html  edit.html  feed.html  guildsettings.html  landing.html  login.html  privacy.html  privacy.md  register.html  rules.html  rules.md  search.html  singledelete.html  singlepost.html  terms.html  terms.md  userfeed.html  usersettings.html
freak/templates/admin/: 400.html  403.html  404.html  500.html  admin_base.html  admin_home.html  admin_report_detail.html  admin_reports.html  admin_strikes.html  admin_user_detail.html  admin_users.html
freak/templates/macros/: button.html  create.html  embed.html  feed.html  icon.html  nav.html  title.html
freak/website/: __init__.py  about.py  accounts.py  admin.py  create.py  delete.py  detail.py  edit.py  frontpage.py  moderation.py  reports.py
(+6 files in other folders)
