[project]
name = "sakuragasaki46_freak"
authors = [
    { name = "Sakuragasaki46" }
]
dynamic = ["version"]
dependencies = [
    "Python-Dotenv>=1.0.0",
    "Quart",
    "Quart-Schema",
    "Python-Slugify",
    "SQLAlchemy>=2.0.0",
    # XXX it's Quart-wtFORMS not Quart-wtf see: https://github.com/Quart-Addons/quart-wtf/issues/20
    "Quart-WTForms>=1.0.3",
    "Quart-Auth",
    "Alembic",
    "Markdown>=3.0",
    "PsycoPG>=3.0",
    "libsass",
    "setuptools>=78.1.0",
    "Hypercorn",
    "suou[sqlalchemy]>=0.7.7"
]
requires-python =  ">=3.10"
classifiers = [
    "Private :: X"
]


[tool.setuptools]
packages = ["freak"]

[tool.setuptools.dynamic]
version = { attr = "freak.__version__" }

